--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>q804448403</title>
+  <title>专添队友包</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/openlayers@4.6.4/dist/ol.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
@@ -34,9 +34,9 @@
   <div id="app">
     <div class="sidenav" id="navBox" style="display:none;">
       <section class="section">
-        <h1 class="title STYLE4">q804448403</h1>
-        <h1 class="title STYLE1">大吉大利</h1>
-         <h1 class="title STYLE1">晚上吃鸡</h1>	  
+        <h1 class="title STYLE4">野猪佩奇身上纹，枪法专打有缘人</h1>
+        <h1 class="title STYLE1">大吉大利，今晚吃鸡</h1>
+         <h1 class="title STYLE1">带妹专属，稳定奔放</h1>	  
         <!-- <div class="field is-grouped">
           <a class="button is-small">Button</a>
           <a class="button is-small">Button2</a>
